Fixed scrollBar obiettivi

--- a/src/main/webapp/css/obiettivi.css
+++ b/src/main/webapp/css/obiettivi.css
@@ -361,10 +361,14 @@ html, body{
     width: 100%;
     height: 100%;
     background-color: #EEECF2;
-    border-radius:30px;
-    padding:35px 35px 0 35px;
-    overflow-x: scroll;
+    border-radius: 30px;
+    padding: 35px 35px 0 35px;
+    overflow-x: hidden;
 
+}
+
+.background-content::-webkit-scrollbar, body::-webkit-scrollbar{
+    display: none;
 }
 
 /*icona obiettivi*/
